...
          child: Column(
            children: [
              const SizedBox(
                height: 50,
              ),
              const Text(
                'Bienvenido',
                style: TextStyle(fontSize: 40, fontWeight: FontWeight.bold),
              ),
              SizedBox(
                  width: 300,
                  height: 100,
                  child: Image.asset(
...
                  ),
                  const SizedBox(height: 20),
                  Row(
                    children: [
                      Expanded(
                        child: ButtonWithoutIcon(
                          text: "Iniciar Sesion",
                          onPressed: () {
                            debugPrint("INICIANDO SESION");
                            FocusScope.of(context).unfocus();
                            signUserIn();
                          },
                        ),
...
